Fixed effects and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -237,18 +237,37 @@ h5 {
 .img-wrapper > .dot {
     width: 80%;
     aspect-ratio: 1 / 1;
-    background-color: white;
+    background-color: rgba(255, 255, 255, .8);
     border-radius: 50%;
     position: absolute;
     margin: 10%;
-    
     
 }
 
 .col-sm {
    text-align: center;
-   
 }
+
+.learn {
+    background-color: #93BE8B;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    
+}
+
+
+.col-sm:hover > img.blur {
+    filter: blur(5px)
+
+}
+
+.img-wrapper:hover > img.blur {
+    filter: blur(5px)
+    
+}
+    
+
+
 
 
 
